# hybro-hub

./: CHANGELOG.md  README.md  config.yaml.example  pyproject.toml
.github/workflows/: publish.yml
examples/: discover_agents.py  send_message.py  stream_message.py
hub/: __init__.py  __main__.py  a2a_compat.py  agent_registry.py  cli.py  config.py  dispatcher.py  lock.py  main.py  publish_queue.py  relay_client.py
hybro_hub/: __init__.py  _sse.py  client.py  errors.py  models.py
tests/: _launch_agent.py  e2e_live_test.py  test_a2a_compat.py  test_agent_registry.py  test_cli.py  test_client.py  test_config.py  test_dispatcher.py  test_main.py  test_publish_queue.py  test_relay_client.py  test_sse.py
