[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybro-hub"
version = "0.1.2"
description = "Python SDK for the Hybro Gateway API — discover and communicate with cloud A2A agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hybro", email = "dev@hybro.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "httpx-sse>=0.4,<1",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "click>=8.0",
    "a2a-sdk>=0.3,<1",
    "psutil>=5.9",
]

[project.optional-dependencies]
ollama = ["a2a-adapter"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
hybro-hub = "hub.cli:main"

[project.urls]
Homepage = "https://hybro.ai"
Repository = "https://github.com/hybro-ai/hybro-hub"

[tool.hatch.build.targets.wheel]
packages = ["hybro_hub", "hub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
